<?xml version="1.0"?>
<package format="2">
  <name>offb_test</name>
  <version>0.0.0</version>
  <description>The offb_test package</description>

  <maintainer email="ros@todo.todo">ros</maintainer>
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>mavlink</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>mavlink</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>mavlink</exec_depend>

 <export>
 </export>
</package>
